--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <tr>
               <th><a href="https://sky19930112.github.io/HTML-CSS-Challenge"><img src=".\image\first work.jpg" alt="work is missing" style="width: 400px;height:400px;" title="first homework"></a></th>
               <th><a href="https://alexyn26.github.io/Lively-Planner"><img src=".\image\planner.png" alt="work is missing" style="width: 300px;height:300px;" title="planner group project I involved in bootcamp"></a></th>
-              <th><a href=""><img src=".\image\other work.png" alt="work is missing" style="width: 300px;height:300px;" title="other practice"></a></th>
+              <th><a href="https://recipeio-project2.herokuapp.com/login"><img src=".\image\project2.jpg" alt="work is missing" style="width: 300px;height:300px;" title="other practice"></a></th>
               <th><a href=""><img src=".\image\guitar.jpg" alt="work is missing" style="width: 300px;height:300px;" title="guitar I made"></a></th>
             </tr>
           </table>
