--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2 id="Works">Works</h2>
         <table>  <!-- I put titled tags on each image, first application links to the application page -->
             <tr>
+              <th><a href="https://lechonks-larder.herokuapp.com/"><img src=".\image\project3.jpg" alt="work is missing" style="width: 300px;height:300px;" title="group project I involved in bootcamp"></a></th>
               <th><a href="https://sky19930112.github.io/HTML-CSS-Challenge"><img src=".\image\first work.jpg" alt="work is missing" style="width: 400px;height:400px;" title="first homework"></a></th>
               <th><a href="https://alexyn26.github.io/Lively-Planner"><img src=".\image\planner.png" alt="work is missing" style="width: 300px;height:300px;" title="planner group project I involved in bootcamp"></a></th>
               <th><a href="https://recipeio-project2.herokuapp.com/login"><img src=".\image\project2.jpg" alt="work is missing" style="width: 300px;height:300px;" title="other practice"></a></th>
